--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,89 +1,275 @@
-body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-  margin: 33px;
+// body {
+//   background-color: #fff;
+//   color: #333;
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+//   margin: 33px;
+// }
+//
+// p, ol, ul, td {
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+//   margin: 33px;
+// }
+//
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px;
+// }
+//
+// a {
+//   color: #000;
+//
+//   &:visited {
+//     color: #666;
+//   }
+//
+//   &:hover {
+//     color: #fff;
+//     background-color: #000;
+//   }
+// }
+//
+// th {
+//   padding-bottom: 5px;
+// }
+//
+// td {
+//   padding-bottom: 7px;
+//   padding-left: 5px;
+//   padding-right: 5px;
+// }
+//
+// div {
+//   &.field, &.actions {
+//     margin-bottom: 10px;
+//   }
+// }
+//
+// #notice {
+//   color: green;
+// }
+//
+// .field_with_errors {
+//   padding: 2px;
+//   background-color: red;
+//   display: table;
+// }
+//
+// #error_explanation {
+//   width: 450px;
+//   border: 2px solid red;
+//   padding: 7px;
+//   padding-bottom: 0;
+//   margin-bottom: 20px;
+//   background-color: #f0f0f0;
+//
+//   h2 {
+//     text-align: left;
+//     font-weight: bold;
+//     padding: 5px 5px 5px 15px;
+//     font-size: 12px;
+//     margin: -7px;
+//     margin-bottom: 0;
+//     background-color: #c00;
+//     color: #fff;
+//   }
+//
+//   ul li {
+//     font-size: 12px;
+//     list-style: square;
+//   }
+// }
+//
+// label {
+//   display: block;
+// }
+
+body{
+  padding-top: 60px;
+}
+section{
+  overflow: auto;
+}
+textarea {
+  resize:vertical;
 }
 
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-  margin: 33px;
+.center{
+  text-align: center;
+}
+.center h1{
+  margin-bottom: 10px;
+}
+/* typography */
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
 }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-a {
-  color: #000;
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
+}
 
-  &:visited {
-    color: #666;
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+/* header */
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
+img {
+
+  .center:block();
+}
+
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  a {
+   color: #555;
+   &:hover {
+     color: #222;
+   }
+ }
+ small {
+   float: left;
+ }
+ ul {
+   float: right;
+   list-style: none;
+   li {
+     float: left;
+     margin-left: 15px;
+   }
+ }
+
+}
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+/* sidebar */
+
+aside {
+  section.user_info {
+    margin-top: 20px;
   }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
   }
 }
 
-th {
-  padding-bottom: 5px;
+.gravatar {
+  float: left;
+  margin-right: 10px;
 }
 
-td {
-  padding-bottom: 7px;
-  padding-left: 5px;
-  padding-right: 5px;
+.gravatar_edit {
+  margin-top: 15px;
+}
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
 }
 
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
+input {
+  height: auto !important;
 }
-
-#notice {
-  color: green;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0;
-    background-color: #c00;
-    color: #fff;
-  }
-
-  ul li {
-    font-size: 12px;
-    list-style: square;
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
   }
 }
+.signin {
+  color: white;
+}
+// .panel-heading {
+//   width: 100%;
+// }
+.simple_form_form {
+  float: left;
+  width: 45%;
+  margin: 10px;
+}
+.joe {
+  float: left;
+  width: 45%;
+  margin: 10px;
 
-label {
-  display: block;
+//    background-image: url('/images/hungryangryjoe.jpg');
+// // opacity: 0.5;
+// background-size: 100% 100%;
 }
