--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,25 @@
   </head>
 
   <body>
-    <div>
-  <% if current_user %>
-    Signed in as <strong><%= current_user.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
-  <% end %>
-</div>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to "hungry angry joe", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+      <li><div>
+          <% if current_user %>
+          <div class="signin">  Signed in as <strong><%= current_user.name %></strong>!</div>
+            <%= link_to "Sign out", signout_path, id: "sign_out" %>
+          <% else %>
+            <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+          <% end %>
+</div></li>
+
+      </ul>
+    </nav>
+  </div>
+</header>
+
     <%= yield %>
   </body>
 </html>
