--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,10 +1,8 @@
-
-<%= form_for(@order, remote: true) do |f| %>
+<%= simple_form_for(@order, remote: true) do |f| %>
 
   <% if @order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
-
         <ul>
           <% order.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -13,12 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %>
-    <%= f.number_field :user_id %>
-  </div>
+  <%= f.input :restaurant_name %>
+  <%= f.input :dish_name %>
+  <%= f.input :order_status %>
+  <%= f.input :price %>
+  <%= f.button :submit, class: "btn btn-primary"  %>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :restaurant_name %>
     <%= f.text_field :restaurant_name %>
   </div>
@@ -37,8 +36,8 @@
     <%= f.label :price %>
     <%= f.number_field :price %>
   </div>
-
+</br>
   <div class="actions">
     <%= f.submit %>
-  </div>
+  </div> -->
 <% end %>
