--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -273,3 +273,9 @@ input {
 // // opacity: 0.5;
 // background-size: 100% 100%;
 }
+.btn-group {
+    cursor: default;
+    background-color: #FFF;
+    border-radius: 6px;
+    text-align: left;
+}
