--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,31 +1,32 @@
-
-
-<div class="container" >
+<div class="container">
   <div class="body">
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="active"><a href="#1zakladka" role="tab" data-toggle="tab">Present Orders</a></li>
-            <li><a href="#2zakladka" role="tab" data-toggle="tab">Orders History</a></li>
-        </ul>
-  <div class="tab-content">
-      <div class="tab-pane active" id="1zakladka">
-          <div class="panel panel-default">
-               <div class="panel-heading">
-
-                 <div class="simple_form_form"> <h1>New Order</h1> <%= render 'form', order: @order %></div>
-
-                </div>
-<div class= "joe">
-  <%= image_tag("/images/hungryangryjoe.jpg", :width => 550, :height => 400, :crop => :fill, :radius => 20, :border => { :width => 4, :color => '#553311' }) %>
-</div>
-                </br>
-              <div class="my-orders">
-                    <%= render 'order', order: @order %>
-              </div>
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="active"><a href="#index" role="tab" data-toggle="tab">Present Orders</a></li>
+      <li><a href="#active" role="tab" data-toggle="tab">Active Orders</a></li>
+      <li><a href="#history" role="tab" data-toggle="tab">Orders History</a></li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane active" id="index">
+        <div class="panel panel-default">
+          <div class="simple_form_form">
+            <h1>New Order</h1>
+            <%= render 'form', order: @order %>
           </div>
+          <div class="joe">
+            <%= image_tag("/images/hungryangryjoe.jpg", :width => 550, :height => 400, :crop => :fill, :radius => 20, :border => {:width => 4, :color => '#553311'}) %>
+          </div>
+        </div>
       </div>
-            <div class="tab-pane" id="2zakladka">
-          zeroo
-           </div>
+      <div class="tab-pane" id="active">
+        <div class="my-orders">
+          <%= render 'order', orders: Order.active %>
+        </div>
       </div>
+      <div class="tab-pane" id="history">
+        <div class="my-orders">
+          <%= render 'order', orders: Order.history %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
