--- a/app/views/orders/edit.js.erb
+++ b/app/views/orders/edit.js.erb
@@ -1,2 +1,1 @@
-$('form').hide();
-$('div#<%= dom_id(@order) %>').replaceWith('<%= j render("form") %>');
+$('div#<%= dom_id(@order) %>').fadeOut();
