--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="tab-pane" id="history">
         <div class="my-orders">
-          <%= render 'order', orders: Order.history %>
+          <%= render 'order1', orders: Order.history %>
         </div>
       </div>
     </div>
