--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,78 +1,30 @@
-<!--
 <table class="table">
   <thead class="thead-default">
   <tr>
     <th>User Name</th>
     <th>Restaurant Name</th>
     <th>Dish</th>
-    <th>Order Status</th>
-    <th>Finalize Order</th>
     <th>Price</th>
-    <th>Delete Order</th>
-
-  </tr>
-  </thead>
-  <tbody>
-  <%= div_for orders.each do |order| %>
-      <tr>
-        <td><%= order.user.name %></td>
-        <td><%= order.restaurant_name %></td>
-        <td><%= order.dish_name %></td>
-        <td><%= order.order_status%></td>
-        <td><%= link_to("Finalize order", order_path(Order.find(order.id), "order" => {"order_status" => "finalized"}, :method => :put, :confirm => "Are you sure?")) %>
-        </td>
-        <td><%= order.price %></td>
-        <td><%= link_to "Delete Order", order, remote: true, method: :delete  %>
-            <i class="glyphicon glyphicon-trash"></i></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table> -->
-
-<table class="table">
-  <thead class="thead-default">
-  <tr>
-    <th>User Name</th>
-    <th>Restaurant Name</th>
-    <th>Dish</th>
-        <th>Price</th>
     <th>Order Status</th>
     <th>Finalize Order</th>
-
     <th>Delete Order</th>
-
   </tr>
   </thead>
   <tbody>
-
     <%= simple_form_for(@order, remote: true) do |f| %>
-
-    <%= div_for orders.each do |order| %>
+      <%= div_for orders.each do |order| %>
         <tr>
           <td><%= order.user.name %></td>
           <td><%= order.restaurant_name %></td>
           <td><%= order.dish_name %></td>
-            <td><%= order.price %></td>
+          <td><%= order.price %></td>
           <td><%= order.order_status%></td>
-
-          <td><button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-ok"></span></button>
-            <%= link_to "Finalize order", finalize_path(order), remote: true %>
-         </td>
-
-
-
-          <td><button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-trash"></span>
-</button><%= link_to " Delete Order", order, remote: true, method: :delete  %></td>
-
+          <td><button type="button" class="btn btn-default" disabled="disabled"><span class="glyphicon glyphicon-ok"></span></button>
+            <%= link_to "Finalize order", finalize_path(order), remote: true %></td>
+          <td><button type="button" class="btn btn-default" disabled="disabled"><span class="glyphicon glyphicon-trash"></span></button>
+            <%= link_to " Delete Order", order, remote: true, method: :delete  %></td>
         </tr>
+      <% end %>
     <% end %>
-
-
-
-    <% end %>
-
-
   </tbody>
 </table>
