--- a/app/views/orders/_order1.html.erb
+++ b/app/views/orders/_order1.html.erb
@@ -1,4 +1,3 @@
-
 <table class="table">
   <thead class="thead-default">
   <tr>
@@ -7,38 +6,24 @@
     <th>Dish</th>
     <th>Price</th>
     <th>Order Status</th>
-    <th></th>
-
-
-
+    <th><th>
+      <th> <colspan="4"></th>
   </tr>
   </thead>
   <tbody>
-
     <%= simple_form_for(@order, remote: true) do |f| %>
-
-    <%= div_for orders.each do |order| %>
+      <%= div_for orders.each do |order| %>
         <tr>
           <td><%= order.user.name %></td>
           <td><%= order.restaurant_name %></td>
           <td><%= order.dish_name %></td>
           <td><%= order.price %></td>
           <td><%= order.order_status%></td>
-      <td>    <button type="button" class="btn btn-default">
-        <span class="glyphicon glyphicon-ok"></span></button>
-        <%= link_to "Delivered order", delivered_path(order), remote: true %></td>
-          <!-- <td><%= link_to "Finalize order",  order, remote: true, method: :put %> -->
-          </td>
-
-
-
-        </tr>
+          <td><button type="button" class="btn btn-default" disabled="disabled"><span class="glyphicon glyphicon-ok"></span></button>
+              <%= link_to "Delivered order", delivered_path(order), remote: true %></td>
+              <td> <colspan="4"></td>
+      </tr>
+      <% end %>
     <% end %>
-
-
-
-    <% end %>
-
-
   </tbody>
 </table>
