Changing db to PostgreSQL,small layout changes

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -289,3 +289,13 @@ div.order_order_status {
 .table th {
    text-align: center;
 }
+
+.pull-middle{
+  float: left;
+  font-weight: bold;
+  line-height: 34px;
+}
+#pullmiddle {
+  float: none;
+  text-align: center;
+}
