--- a/app/views/orders/_order1.html.erb
+++ b/app/views/orders/_order1.html.erb
@@ -5,7 +5,7 @@
         <h3 class="pull-right">
         <md class="text-uppercase"><%= order.user.name %></md><br>
         <small class="text-uppercase">  Created: <%= l order.created_at.to_date %> </small><br>
-        <small class="text_uppercase"> <%= order.order_status %></small>
+        <small class="text_uppercase"> Finalized </small>
 
 
         </h3>
